--- a/docs/DLM/master01-preface.adoc
+++ b/docs/DLM/master01-preface.adoc
@@ -2,7 +2,7 @@
 
 == Purpose
 
-This document specifies the openEHR Decision Support Language (DSL), in both abstract syntax form and as a related model, the Decision Supoort Language Model (DSLM). The latter defines the semantics of a first order predicate style logic that can be used to write clinical Decision Support Models (DSMs) that may be used standalone or with a Process / Plan oriented system such as {openehr_task_planning}[openEHR Task Planning^].
+This document specifies the openEHR Decision Logic Module (DLM) language, in both abstract syntax form and as a related model. The latter defines the semantics of a first order predicate style logic that can be used to write Guideline rule-sets that may be used standalone or with a Process / Plan oriented system such as {openehr_task_planning}[openEHR Task Planning^].
 
 The intended audience includes:
 
@@ -19,11 +19,11 @@ Prerequisite documents for reading this document include:
 Related documents include:
 
 * The {openehr_task_planning}[openEHR Task Planning specification^];
-* The {openehr_cds_gdl}[Guideline Definition Language (GDL)^].
+* The {openehr_cds_gdl2}[Guideline Definition Language (GDL2)^].
 
 == Status
 
-This specification is in the {spec_status} state. The development version of this document can be found at {openehr_proc_latest_decision_language}[{openehr_proc_latest_decision_language}^].
+This specification is in the {spec_status} state. The development version of this document can be found at {openehr_proc_latest_dlm}[{openehr_proc_latest_dlm}^].
 
 Known omissions or questions are indicated in the text with a 'to be determined' paragraph, as follows:
 [.tbd]
@@ -31,7 +31,7 @@ Known omissions or questions are indicated in the text with a 'to be determined'
 
 == Feedback
 
-Feedback may be provided on the {openehr_technical_list}[technical mailing list^].
+Feedback may be provided on the {openehr_process_forum}[process specifications forum^].
 
 Issues may be raised on the {component_prs}[specifications Problem Report tracker^].
 
