Add breast cancer prescribing to examples.

--- a/docs/tp_examples/master05-chemo.adoc
+++ b/docs/tp_examples/master05-chemo.adoc
@@ -80,38 +80,48 @@ input
     neutrophils: Quantity
         currency = 3d
         ranges =
+            ----------------------------------
             [normal]:      |>1 x 10^9/L|,
             [low]:         |0.5 - 1 x 10^9/L|,
             [very_low]:    |<0.5 x 10^9/L|
+            ----------------------------------
 
     platelets: Quantity
         currency = 12h
         ranges =
+            ----------------------------------
             [normal]:      |>75 x 10^9/L|,
             [low]:         |50 - 74 x 10^9/L|,
             [very_low]:    |<50 x 10^9/L|
+            ----------------------------------
 
     bilirubin: Quantity
         currency = 12h
         ranges =
+            ----------------------------------
             [normal]:      |<20 mmol/L|,
             [high]:        |20 - 51 mmol/L|,
             [very_high]:   |51 - 85 mmol/L|,
             [crit_high]:   |>85 mmol/L|
+            ----------------------------------
 
     gfr: Quantity
         currency = 24h
         ranges =
+            ----------------------------------
             [normal]:      |>20 mL/min|,
             [low]:         |10 - 20 mL/min|,
             [very_low]:    |<10 mL/min|
+            ----------------------------------
 
     ldh: Quantity
         currency = 24h
         ranges =
+            ----------------------------------
             [normal]:      |>20 mL/min|,
             [low]:         |10 - 20 mL/min|,
             [very_low]:    |<10 mL/min|
+            ----------------------------------
 
 conditions
     high_ipi:
@@ -134,7 +144,7 @@ rules
 
     doxorubicin_dose: Quantity
         Result := doxorubicin_dose_per_m2 * BSA.bsa_m2
-            * map bilirubin.range
+            * case bilirubin.range
                 ===================
                 [high]:        0.5,
                 [very_high]:   0.25,
@@ -156,13 +166,13 @@ rules
     |
     cyclophosphamide_dose: Quantity
         Result := cyclophosphamide_dose_per_m2 * BSA.bsa_m2
-            * map platelets.range
+            * case platelets.range
                 ===================
                 [normal]:      1,
                 [low]:         0.75
                 ===================
                 
-            * map gfr.range
+            * case gfr.range
                 ===================
                 [normal]:      1,
                 [low]:         0.75,
