--- a/docs/tp_examples/master07-cancer_prescribing.adoc
+++ b/docs/tp_examples/master07-cancer_prescribing.adoc
@@ -44,7 +44,7 @@ input
             [low]  :   |< 40%|
             --------------------
                 
-conditions
+rules -- Conditions
         
     er_negative:
         estrogen_receptor = [negative]
@@ -79,39 +79,40 @@ conditions
         has_allergy ([taxanes]) or 
         has_intolerance ([taxanes])
         
-rules
+rules -- Guideline
 
     molecular_subtype: Terminology_term
-        Result := 
+        Result := [[
             =========================================================
             er_positive and 
             her2_negative and 
-            not ki67.in_range (high):    [luminal_A],
+            not ki67.in_range ([high]):    [luminal_A],
             ---------------------------------------------------------
             er_positive and 
             her2_negative and 
-            ki67.in_range (high):        [luminal_B_HER2_negative],
+            ki67.in_range ([high]):        [luminal_B_HER2_negative],
             ---------------------------------------------------------
             er_positive and 
-            her2_positive:               [luminal_B_HER2_positive],
+            her2_positive:                 [luminal_B_HER2_positive],
             ---------------------------------------------------------
             er_negative and 
             pr_negative and 
             her2_positive and 
-            ki67.in_range (high):        [HER2],
+            ki67.in_range ([high]):        [HER2],
             ---------------------------------------------------------
             er_negative and
             pr_negative and 
             her2_negative and 
-            ki67.in_range (high):        [triple_negative],
+            ki67.in_range ([high]):        [triple_negative],
             ---------------------------------------------------------
-            *:                           [none]
+            *:                             [none]
             =========================================================
+        ]]
     
     chemotherapy_regime: Terminology_term
-        Result :=
+        Result := [[
             ================================================================================
-            not metastatic:
+            not metastatic: [[
                     ========================================================================
                     molecular_subtype in 
                         {[luminal_B_HER2_negative], 
@@ -128,8 +129,9 @@ rules
                     molecular_subtype = [HER2_positive] and 
                     (tnm_t = '1b' and tnm_n = '0'):                  [paditaxel_trastuzumab]
                     ========================================================================
+            ]]
             --------------------------------------------------------------------------------
-            *: 
+            *: [[
                     =====================
                     yyy:        aaa,
                     ---------------------
@@ -137,7 +139,9 @@ rules
                     ---------------------
                     *:
                     =====================
+            ]]
             ================================================================================
+        ]]
             
 terminology
     term_definitions = <
