Update some asciidoctor variables.

--- a/docs/subject_proxy/master.adoc
+++ b/docs/subject_proxy/master.adoc
@@ -2,12 +2,7 @@
 // ============================================ Asciidoc HEADER =============================================
 //
 include::{ref_dir}/docs/boilerplate/book_style_settings.adoc[]
-
-:copyright_year: 2020
-:spec_status: DEVELOPMENT
-:keywords: openehr, proxy, vmr, rules
-:description: openEHR Subject Proxy specification
-
+include::manifest_vars.adoc[]
 include::{ref_dir}/docs/boilerplate/global_vars.adoc[]
 
 //
@@ -16,7 +11,7 @@ include::{ref_dir}/docs/boilerplate/global_vars.adoc[]
 
 image::{openehr_logo}["openEHR logo",align="center"]
 
-= Subject Proxy Specification
+= {spec_title}
 
 include::{ref_dir}/docs/boilerplate/full_front_block.adoc[]
 include::{ref_dir}/docs/references/reference_definitions.adoc[]
