--- a/docs/subject_proxy/master01-preface.adoc
+++ b/docs/subject_proxy/master01-preface.adoc
@@ -14,6 +14,7 @@ The intended audience includes:
 
 Prerequisite documents for reading this document include:
 
+* The {openehr_proc_overview}[openEHR Process and Planning Overview^];
 * The {openehr_overview}[openEHR Architecture Overview^].
 
 Related documents include:
@@ -31,7 +32,7 @@ Known omissions or questions are indicated in the text with a 'to be determined'
 
 == Feedback
 
-Feedback may be provided on the {openehr_technical_list}[technical mailing list^].
+Feedback may be provided on the {openehr_process_forum}[process specifications forum^].
 
 Issues may be raised on the {component_prs}[specifications Problem Report tracker^].
 
