--- a/docs/tp_vml/master.adoc
+++ b/docs/tp_vml/master.adoc
@@ -11,7 +11,7 @@ include::{ref_dir}/docs/boilerplate/global_vars.adoc[]
 
 image::{openehr_logo}["openEHR logo",align="center"]
 
-= Task Planning Visual Modelling Language (TP-VML)
+= {spec_title}
 
 include::{ref_dir}/docs/boilerplate/full_front_block.adoc[]
 include::{ref_dir}/docs/references/reference_definitions.adoc[]
