--- a/docs/tp_examples/master05-chemo.adoc
+++ b/docs/tp_examples/master05-chemo.adoc
@@ -2,7 +2,7 @@
 
 This section illustrates multi-drug chemotherapy with complex dosing and timing arrangements.
 
-This example is based on the version of RCHOPS-21 documented by http:|nssg.oxford-haematology.org.uk/lymphoma/documents/lymphoma-chemo-protocols/L-80-r-chop-21.pdf[NHS Thames Valley Cancer Network].
+This example is based on the version of RCHOPS-21 documented by http://nssg.oxford-haematology.org.uk/lymphoma/documents/lymphoma-chemo-protocols/L-80-r-chop-21.pdf[NHS Thames Valley Cancer Network].
 
 == Limitations
 
